<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<packaging>jar</packaging>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.greatgamesonly.opensource.utils</groupId>
	<artifactId>reflectionutils</artifactId>
	<url>https://github.com/ricomaster9000/Java-Reflection-Utils</url>
	<version>1.1.14.2</version>
	<dependencies>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>
		<!--Cx78f40514-81ff 7.5 Uncontrolled Recursion vulnerability with High severity found
			HANDLED by how dependency is used, it has its own recursion check to prevent infinite recursion-->
	</dependencies>
	<properties>
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
</project>
